[gd_scene load_steps=8 format=3 uid="uid://b3homprvw0wxj"]

[ext_resource type="Script" path="res://scripts/bulding_floor.gd" id="1_sj2p8"]
[ext_resource type="Script" path="res://scripts/floor_colliders.gd" id="2_iycpu"]
[ext_resource type="BoxMesh" uid="uid://bmm0s4107n6rl" path="res://models/meshes/building_mesh.tres" id="2_nusju"]

[sub_resource type="SphereShape3D" id="SphereShape3D_m46t3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ec2ff"]
size = Vector3(4, 3, 0.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_qggk2"]
size = Vector3(4, 4, 4)

[sub_resource type="BoxShape3D" id="BoxShape3D_hmorv"]
size = Vector3(4.2, 4.2, 4.2)

[node name="Bulding" type="Node3D" node_paths=PackedStringArray("colliders") groups=["building_floor"]]
editor_description = "я ебал его рот
"
script = ExtResource("1_sj2p8")
colliders = [NodePath("coll_1"), NodePath("coll_2"), NodePath("coll_3"), NodePath("coll_4")]

[node name="coll_1" type="Area3D" parent="." groups=["building_colliders", "collider_forward", "floor_colliders"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)
collision_layer = 256
collision_mask = 256
script = ExtResource("2_iycpu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="coll_1"]
shape = SubResource("SphereShape3D_m46t3")
disabled = true

[node name="wall" type="CollisionShape3D" parent="coll_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_ec2ff")
disabled = true

[node name="floor" type="CollisionShape3D" parent="coll_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)
shape = SubResource("BoxShape3D_qggk2")
disabled = true

[node name="coll_2" type="Area3D" parent="." groups=["building_colliders", "collider_forward", "floor_colliders"]]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 2)
collision_layer = 256
collision_mask = 256
script = ExtResource("2_iycpu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="coll_2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.49691e-07, 0, 0)
shape = SubResource("SphereShape3D_m46t3")
disabled = true

[node name="wall" type="CollisionShape3D" parent="coll_2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_ec2ff")
disabled = true

[node name="floor" type="CollisionShape3D" parent="coll_2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)
shape = SubResource("BoxShape3D_qggk2")
disabled = true

[node name="coll_3" type="Area3D" parent="." groups=["building_colliders", "collider_side", "floor_colliders"]]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2, 0, 0)
collision_layer = 256
collision_mask = 256
script = ExtResource("2_iycpu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="coll_3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.689e-07, 0, 0)
shape = SubResource("SphereShape3D_m46t3")
disabled = true

[node name="wall" type="CollisionShape3D" parent="coll_3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.49691e-07, 1.5, 0)
shape = SubResource("BoxShape3D_ec2ff")
disabled = true

[node name="floor" type="CollisionShape3D" parent="coll_3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)
shape = SubResource("BoxShape3D_qggk2")
disabled = true

[node name="coll_4" type="Area3D" parent="." groups=["building_colliders", "collider_side", "floor_colliders"]]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2, 0, 0)
collision_layer = 256
collision_mask = 256
script = ExtResource("2_iycpu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="coll_4"]
shape = SubResource("SphereShape3D_m46t3")
disabled = true

[node name="wall" type="CollisionShape3D" parent="coll_4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_ec2ff")
disabled = true

[node name="floor" type="CollisionShape3D" parent="coll_4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)
shape = SubResource("BoxShape3D_qggk2")
disabled = true

[node name="CSGMesh3D12" type="CSGMesh3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
cast_shadow = 0
collision_layer = 64
collision_mask = 0
mesh = ExtResource("2_nusju")

[node name="ShapeCast3D" type="ShapeCast3D" parent="CSGMesh3D12"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_hmorv")
collision_mask = 190
collide_with_areas = true

[connection signal="area_entered" from="coll_1" to="." method="_on_coll_1_area_entered"]
[connection signal="area_entered" from="coll_2" to="." method="_on_coll_2_area_entered"]
[connection signal="area_entered" from="coll_3" to="." method="_on_coll_3_area_entered"]
[connection signal="area_entered" from="coll_4" to="." method="_on_coll_4_area_entered"]
